<resources>
    <string name="app_name">Covid Info</string>

    <!-- welcome -->
    <string name="wlcm_logo_name">You are not alone</string>
    <string name="wlcm_button">Explore</string>
    <string name="wlcm_subtitle">Thank you for the download!\nStart right now getting\n info about Corona Virus</string>

    <!--   home -->
    <string name="covid_19">Covid-19</string>
    <string name="feeling_sick">Are you feeling sick?</string>
    <string name="please_call">If you are feeling sick, please call Covid Hotline or try to book online consultation with a doctor.</string>
    <string name="online_appointment">Online appointment</string>
    <string name="call">Call</string>
    <string name="prevention">Prevention</string>
    <string name="higiene_tips">higiene tips</string>
    <string name="symptoms_button">symptoms button</string>
    <string name="symptoms_question">What are the symptoms?</string>
    <string name="symptoms_learn">Learn more about Covid-19 symptoms.</string>

    <!-- statistic -->
    <string name="title_stats">Live Statistics</string>
    <string name="label_affected_stats">Affected</string>
    <string name="label_death_stats">Death</string>
    <string name="label_recovered_stats">Recovered</string>
    <string name="label_active_stats">Active</string>
    <string name="label_critical_stats">Critical</string>

    <!-- news -->
    <string name="desc">News description</string>
    <string name="news_title">News title</string>
    <string name="change_country">Change Country</string>

    <!-- My info -->
    <string name="self_description">Hello! I\'m Damiano and I\'m from Ivrea, a small town in Piedmont where the Olivetti company was born, grew up and died.
        I\'m 22 years old and I\'m in my first year of the Master\'s degree: Artificial Intelligence at the University of Turin.
        I know and have used the following programming languages: C, Java, Kotlin, Haskell, Python.
        I am here thanks to the Erasmus+ program for the summer semester and I was impressed by the greatness of the Polytechnic and the beauty of Wroclaw. \n\n
        Hey, My name is Piotr, I\'m from central Poland and I study on Wroclaw University of Science and Technology.
        I\'m 24 years old and I plan to get my Master\'s degree of Applied Computer Science next year. I work as Test Automation Engineer and I\'m interested in software development.
    </string>




    <!--   menù -->
    <string name="menu_home">Home</string>
    <string name="menu_stats">Statistic</string>
    <string name="menu_news">News</string>
    <string name="menu_info">Info</string>
</resources>
