<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wlcm_background">

        <ImageView
            android:id="@+id/wlcm_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/wlcm_logo_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal|top"
            android:text="@string/wlcm_logo_name"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/wlcm_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wlcm_logo_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/wlcm_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="5sp"
            android:text="@string/wlcm_subtitle"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wlcm_logo_name_text"
            app:layout_constraintVertical_bias="0.20" />

        <Button
            android:id="@+id/wlcm_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wlcm_button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wlcm_subtitle"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
