<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pwr.edu.covid.info.ui.stat.StatisticViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_header_bg"
        tools:context=".ui.stat.StatisticFragment">

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_active"
            app:layout_constraintVertical_bias="0.42000002"
            app:spinnerVisibility="@{viewModel.networkOperationStatus}" />

        <TextView
            android:id="@+id/statistics"
            style="@style/title_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/title_stats"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_affected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="214dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_rectangle_yellow"
            app:layout_constraintEnd_toStartOf="@+id/iv_death"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_affected"
            style="@style/label_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_affected_stats"
            app:layout_constraintStart_toStartOf="@+id/iv_affected"
            app:layout_constraintTop_toTopOf="@+id/iv_affected" />

        <TextView
            android:id="@+id/text_num_affected"
            style="@style/bigNumber_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{``  + viewModel.global.cases}"
            app:layout_constraintStart_toStartOf="@+id/label_affected"
            app:layout_constraintTop_toBottomOf="@+id/label_affected"
            tools:text="10,000,000" />

        <ImageView
            android:id="@+id/iv_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_rectangle_red"
            app:layout_constraintBottom_toBottomOf="@+id/iv_affected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_affected"
            app:layout_constraintTop_toTopOf="@+id/iv_affected" />

        <TextView
            android:id="@+id/label_death"
            style="@style/label_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_death_stats"
            app:layout_constraintStart_toStartOf="@+id/iv_death"
            app:layout_constraintTop_toTopOf="@+id/iv_death" />

        <TextView
            android:id="@+id/text_num_death"
            style="@style/bigNumber_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{``  + viewModel.global.deaths}"
            app:layout_constraintStart_toStartOf="@+id/label_death"
            app:layout_constraintTop_toBottomOf="@+id/label_death"
            tools:text="10,000,000" />

        <ImageView
            android:id="@+id/iv_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_square_green"
            app:layout_constraintEnd_toStartOf="@+id/iv_active"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_affected" />

        <TextView
            android:id="@+id/label_recovered"
            style="@style/label_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_recovered_stats"
            app:layout_constraintStart_toStartOf="@+id/iv_recovered"
            app:layout_constraintTop_toTopOf="@+id/iv_recovered" />

        <TextView
            android:id="@+id/text_num_recovered"
            style="@style/mediumNumber_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{``  + viewModel.global.recovered}"
            app:layout_constraintStart_toStartOf="@+id/label_recovered"
            app:layout_constraintTop_toBottomOf="@+id/label_recovered"
            tools:text="1,800,000" />

        <ImageView
            android:id="@+id/iv_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_square_azure"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recovered"
            app:layout_constraintEnd_toStartOf="@+id/iv_critical"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_recovered" />

        <TextView
            android:id="@+id/label_active"
            style="@style/label_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_active_stats"
            app:layout_constraintStart_toStartOf="@+id/iv_active"
            app:layout_constraintTop_toTopOf="@+id/iv_active" />

        <TextView
            android:id="@+id/text_num_active"
            style="@style/mediumNumber_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@{``  + viewModel.global.active}"
            app:layout_constraintStart_toStartOf="@+id/iv_active"
            app:layout_constraintTop_toBottomOf="@+id/label_active"
            tools:text="1,700,000" />

        <ImageView
            android:id="@+id/iv_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_square_purple"
            app:layout_constraintBottom_toBottomOf="@+id/iv_active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_active" />

        <TextView
            android:id="@+id/label_critical"
            style="@style/label_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_critical_stats"
            app:layout_constraintStart_toStartOf="@+id/iv_critical"
            app:layout_constraintTop_toTopOf="@+id/iv_critical" />

        <TextView
            android:id="@+id/text_num_critical"
            style="@style/mediumNumber_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@{``  + viewModel.global.critical}"
            app:layout_constraintStart_toStartOf="@+id/iv_critical"
            app:layout_constraintTop_toBottomOf="@+id/label_critical"
            tools:text="100,000" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>